--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3,5 +3,5 @@
 }
 
 #by-css-file .result {
-  background-image: url('../img/by-css-file.png');
+  background-image: url('/acrts/img/by-css-file.png');
 }
