Making references absolute URLs

--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,5 @@
 }
 
 #by-css-file .result {
-  background-image: url('/acrts/img/by-css-file.png');
+  background-image: url('https://ibnesayeed.github.io/acrts/img/by-css-file.png');
 }
